2009-12-27  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* test.el (test-transform-body): add. transforms the body of
	`defcase' recursively
	(defcase): use `test-transform-body'

	* test/run-test.el (twittering-run-test): colorize resulting
	outputs

2009-12-27  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-http-post-default-sentinel):
	Check if buffer live-p before killing it.
	(twittering-http-get-list-index-sentinel): Likewise.

	* twittering-mode.el (twittering-setup-minibuffer): Remove an
	unnecessary call.

	* twittering-mode.el (twittering-other-user-list-interactive): Fix
	condition to detect a cancel.

	* twittering-mode.el (twittering-http-get-list-index-sentinel):
	Use `search-forward-regexp' instead of `search-forward' to fix a
	meaningless search.
	
2009-12-26  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-ensure-ca-cert): kludge for ssl
	certificate problem.
	(twittering-start-http-ssl-session): use
	`twittering-ensure-ca-cert'

2009-12-25  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-show-minibuffer-length): Replace
	`minibufferp' by `minibuffer-window-active-p' to work this on
	Emacs21.
	(twittering-show-minibuffer-length): Change a message style for
	Emacs23.
	(twittering-setup-minibuffer, twittering-finish-minibuffer): Hook
	`post-command-hook' instead of `after-change-functions' to work in
	cooperation with SKK.

2009-12-25  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-tinyurl-get): Fix typo to resolve
	error "Symbol's value as variable is void". This problem was found
	by naota.

2009-12-25  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-show-minibuffer-length): disabled
	on Emacs21 because `minibufferp' is not available.
	(twittering-update-status-from-minibuffer): set
	`minibuffer-message-timeout' to `nil'. `t' causes error on
	Emacs23.

2009-12-23  Satoshi Yatagawa  <yata_github@y.hauN.org>
